# info-h410

./: .gitignore  connect4game.py  main.py  minimax.py  pyproject.toml  test.py
