[tool.poetry]
name = "info-h410"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"